# mattpace.art

./: .eleventyignore  .gitignore  .mise.toml  CLAUDE.md  CONTEXT-MAP.md  IDEAS.md  LICENSE  README.md  eleventy.config.js  framework-review.md  index.html  manifest.json  package-lock.json  package.json  pyproject.toml  sketchbook-implementation-plan.md
analysis/: CLAUDE.md  README.md  main.py  pyproject.toml
analysis/pipelines/: README.md
analysis/pipelines/edges/: README.md  pipeline.py
analysis/playground/: README.md  canny_edge_fence.py
analysis/sketchbook/: paths.py
framework/: CONTEXT.md  README.md  pyproject.toml
framework/src/sketchbook/: __init__.py  cli.py  discovery.py  scaffold.py
framework/tests/: conftest.py  steps.py
framework/tests/acceptance/: test_01_walking_skeleton.py  test_02_real_step.py  test_04_dag_overview.py  test_05_explicit_wiring.py  test_06_sketch_browser.py  test_07_static_site.py  test_10_new_sketch_command.py  test_color_param.py  test_cutover.py  test_dag_overview.py  test_error_propagation.py  test_execution_profiles.py  test_explicit_wiring.py  test_hotreload.py  test_loader_decoupling.py  (+13 more)
sketches/: .gitignore  CONTEXT.md  README.md  __init__.py  pyproject.toml  types.py  wand_compat.py
sketches/_template/: index.html  index.js
sketches/cardboard/: __init__.py  index.html  index.js
sketches/cardboard-stripes/: index.html  index.js
sketches/cardboard_stripes/: __init__.py
sketches/cardboard_v3/: __init__.py
sketches/circle/: index.html  index.js  jsconfig.json  params.js  sketch.js  tweakpane.js
sketches/circle-texture/: index.html  index.js  jsconfig.json
sketches/deep_blur/: __init__.py
sketches/diamond/: __init__.py
sketches/dice-texture/: index.html  index.js
sketches/edge_hello/: __init__.py
sketches/fan_in/: __init__.py
sketches/fan_out/: __init__.py
sketches/fence-torn-paper/: __init__.py
sketches/kick-polygons/: __init__.py
sketches/lib/: preset-manager.js  tweakpane.js
sketches/shore-tessellation/: __init__.py
sketches/shore_polar/: __init__.py
sketches/shore_tessellation/: __init__.py
sketches/tree-bark-tile/: index.html  index.js
sketches/two_chains/: __init__.py
(+234 files in other folders)
