[project]
name = "analysis"
version = "0.1.0"
description = "Image analysis tooling for mattpace.art sketches"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
analysis = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["main.py", "sketchbook", "pipelines"]

[tool.uv]
package = true
