[project]
name = "analysis"
version = "0.1.0"
description = "Image analysis tooling for mattpace.art sketches"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python-headless>=4.13.0.92",
    "panel>=1.8.9",
    "param>=2.3.2",
]

[project.scripts]
analysis = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["main.py", "sketchbook", "pipelines"]

[tool.uv]
package = true
