[project]
name = "sketches"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = ["sketchbook", "wand", "opencv-python-headless"]

[tool.uv.sources]
sketchbook = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "ruff>=0.9",
]
